--- a/cscssoverride-wow.css
+++ b/cscssoverride-wow.css
@@ -17,7 +17,7 @@
 /* Start button */
 #ApplicationPage div#WelcomePage div.jumbotron > a#startapplication-btn {
   animation: color-change 1s infinite;
-  background-color: #FFD5C2;
+  background-color: #FFD5C2 !important;
 }
 @keyframes color-change {
   0% { color: #4ECDC4; }
@@ -26,6 +26,7 @@
 }
 #ApplicationPage div#WelcomePage div.jumbotron > a#startapplication-btn:hover {
   box-shadow: 5px 10px 18px #888888;
+  background-color: #FFD5C2 !important;
 }
 /* Go mobile link */
 #ApplicationPage div#WelcomePage div.jumbotron > div.hidden-phone a#mobilelink {
