--- a/cscssoverride-wow.css
+++ b/cscssoverride-wow.css
@@ -24,8 +24,8 @@
   50% { color: #FF6B6B; }
   100% { color: #4ECDC4; }
 }
-#ApplicationPage div#WelcomePage div.jumbotron > a#startapplication-btn:hover {
-  box-shadow: 5px 10px 18px #888888;
+.btn, .btn-startapplication {
+  border-radius: 50px !important;
   background-color: #FFD5C2 !important;
 }
 /* Go mobile link */
