--- a/cscssoverride-wow.css
+++ b/cscssoverride-wow.css
@@ -1,3 +1,20 @@
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab) !important;
+	background-size: 400% 400% !important;
+	animation: gradient 15s ease infinite !important;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 /* --- KIOSK WELCOME PAGE --- */
 /* Client logo */
 #ApplicationPage div#WelcomePage img {
